--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <div class="search-bar">
     <input type="text" id="searchInput" placeholder="Search for albums or songs...">
-    <button id="searchButton">🔍</button>
+    <button id="searchButton"></button>
     </div>
     <div class="main-content">
     <div class="player" id="player-section">
@@ -25,10 +25,10 @@
             <h3 class="artist" id="artist">Artist Name</h3>
         </div>
         <div class="controls">
-            <button class="prev" id="prev">Previous</button>
+            <button class="prev" id="prevButton">Previous</button>
             <button class="play" id="play">Play</button>
             <button class="pause" id="pause" style="display: none;">Pause</button>
-            <button class="next" id="next">Next</button>
+            <button class="next" id="nextButton">Next</button>
         </div>
         <div class="volume">
             <i class="fas fa-volume-low"></i>
